# mock-ml-job

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  test_integration.py  test_training_simulator.py  training_simulator.py
.github/workflows/: ci.yml  release.yml
